--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+	Copyright
+-->
+
 <head>
 	<title>A simple title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
